@@ -1,1 +1,11 @@
 from django.db import models
+from django.contrib.auth.models import User
+from django.db.models.signals import post_save
+from django.dispatch import receiver
+
+from SaleProcess.models import Cart
+
+@receiver(post_save, sender=User)
+def create_user_profile(sender, instance, **kwargs):
+    if not Cart.objects.filter(user=instance):
+        Cart.objects.create(user=instance)
