@@ -8,3 +8,6 @@ do uzupełnienia
 1. Dodanie UserStories.txt
 2. Usuwanie produktu z koszyka gdy zostanie usuniety z bazy danych
 3. Dziedziczenie zmian z kategorii zrodlowej do podkategorii
+
+2020-11-22
+1. Koszyk tworzony automatycznie przy tworzeniu usera jednorazowo
